<package format="2">
  <name>rqt_logger_level</name>
  <version>0.4.8</version>
  <description>rqt_logger_level provides a GUI plugin for configuring the logger level of ROS nodes.<br />
   <br />
  rqt_logger_level takes over `wx`-based tool [[rxloggerlevel]].
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_logger_level</url>
  <url type="repository">https://github.com/ros-visualization/rqt_logger_level</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_logger_level/issues</url>

  <author>Aaron Blasdel</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>python3-catkin-pkg-modules</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
